@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,7 @@ package gc.g1;
  * @library /test/lib
  * @requires vm.gc.G1
  * @build sun.hotspot.WhiteBox
- * @run driver ClassFileInstaller sun.hotspot.WhiteBox
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller sun.hotspot.WhiteBox
  * @run main/othervm -Xbootclasspath/a:. -XX:+UseG1GC -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
         -XX:+IgnoreUnrecognizedVMOptions -XX:+UseLargePages gc.g1.TestLargePageUseForHeap
  */
@@ -61,6 +61,11 @@ public class TestLargePageUseForHeap {
     }
 
     static boolean checkLargePageEnabled(OutputAnalyzer output) {
+        String lp = output.firstMatch("Large Page Support: (\\w*)", 1);
+        // Make sure large pages really are enabled.
+        if (lp == null || lp.equals("Disabled")) {
+            return false;
+        }
         // This message is printed when tried to reserve a memory with large page but it failed.
         String errorStr = "Reserve regular memory without large pages";
         String heapPattern = ".*Heap: ";
@@ -84,7 +89,7 @@ public class TestLargePageUseForHeap {
         pb = ProcessTools.createJavaProcessBuilder("-XX:+UseG1GC",
                                                    "-XX:G1HeapRegionSize=" + regionSize,
                                                    "-Xmx128m",
-                                                   "-Xlog:pagesize,gc+heap+coops=debug",
+                                                   "-Xlog:gc+init,pagesize,gc+heap+coops=debug",
                                                    "-XX:+UseLargePages",
                                                    "-version");
 
@@ -97,7 +102,7 @@ public class TestLargePageUseForHeap {
         pb = ProcessTools.createJavaProcessBuilder("-XX:+UseG1GC",
                                                    "-XX:G1HeapRegionSize=" + regionSize,
                                                    "-Xmx128m",
-                                                   "-Xlog:pagesize,gc+heap+coops=debug",
+                                                   "-Xlog:gc+init,pagesize,gc+heap+coops=debug",
                                                    "-XX:-UseLargePages",
                                                    "-version");
 
